# robonomics

./: Cargo.toml  crates.js  search-index.js  source-files.js  weights.rs
cli/: Cargo.toml
frame/crowdloan/: Cargo.toml
frame/crowdloan/src/: lib.rs
frame/datalog/: Cargo.toml
frame/datalog/src/: benchmarking.rs  lib.rs  weights.rs
frame/digital-twin/: Cargo.toml
frame/digital-twin/src/: benchmarking.rs  lib.rs  weights.rs  weights1.rs
frame/launch/: Cargo.toml
frame/launch/src/: lib.rs  weights.rs
frame/liability/: Cargo.toml
frame/liability/src/: benchmarking.rs  lib.rs
frame/lighthouse/: Cargo.toml
frame/lighthouse/src/: benchmarking.rs  lib.rs
frame/rws/: Cargo.toml
frame/rws/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
frame/staking/: Cargo.toml
frame/staking/src/: lib.rs
frame/xcm-info/: Cargo.toml
frame/xcm-info/src/: benchmarking.rs  lib.rs  weights.rs
implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/future/future/: trait.Future.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/libp2p_swarm/behaviour/: trait.NetworkBehaviour.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
io/: Cargo.toml
node/: Cargo.toml
node/rpc/core/src/: lib.rs
node/service/src/: dev.rs  parachain.rs
node/src/: command.rs
node/src/chain_spec/: dev.rs  mainnet.rs
pair/: Cargo.toml
primitives/: Cargo.toml
protocol/: Cargo.toml
protocol/examples/reqres/: Cargo.toml
protocol/src/pubsub/: gossipsub.rs
robonomics/: fn.main.html  index.html
robonomics_pair/: all.html  index.html  sidebar-items.js
robonomics_pair/error/: enum.Error.html  index.html  sidebar-items.js  type.Result.html
robonomics_pair/pair/: enum.PairSubCmds.html  fn.reqres_client.html  fn.reqres_server.html  index.html  sidebar-items.js  struct.ConnectCmd.html  struct.ListenCmd.html  struct.PairCmd.html
robonomics_protocol/: all.html  index.html  sidebar-items.js
robonomics_protocol/network/: index.html  sidebar-items.js  struct.RobonomicsNetwork.html
robonomics_protocol/network/behaviour/: enum.OutEvent.html  index.html  sidebar-items.js  struct.RobonomicsNetworkBehaviour.html
robonomics_protocol/network/discovery/: fn.add_explicit_peers.html  fn.add_peers.html  index.html  sidebar-items.js
robonomics_protocol/network/worker/: index.html  sidebar-items.js  struct.NetworkWorker.html
robonomics_protocol/pubsub/: enum.ToWorkerMsg.html  index.html  sidebar-items.js  struct.Message.html  struct.Pubsub.html  trait.PubSub.html  type.Inbox.html
robonomics_protocol/reqres/: fn.mk_transport.html  fn.reqres.html  index.html
robonomics_request_response_example/: all.html  fn.main.html  index.html
robonomics_ros_example/: all.html  fn.main.html  index.html
robonomics_rpc/: all.html  fn.create_full.html  index.html  sidebar-items.js  struct.FullDeps.html
robonomics_rpc/reqresrpc/: fn.get_addr.html  index.html  sidebar-items.js  struct.ReqRespRpc.html  trait.ReqRespRpcServer.html
robonomics_service/: enum.Error.html  enum.Subcommand.html  fn.run.html  index.html  struct.Cli.html
robonomics_service/chain_spec/: enum.RobonomicsFamily.html  struct.Extensions.html
robonomics_service/parachain/: index.html
robonomics_service/parachain/alpha/: fn.start_node.html  struct.AlphaExecutor.html  struct.RuntimeApi.html
robonomics_service/parachain/chain_spec/: struct.Extensions.html
robonomics_service/parachain/command/: struct.RelayChainCli.html
robonomics_service/parachain/ipci/: fn.start_node.html  index.html  struct.IpciExecutor.html  struct.RuntimeApi.html
robonomics_service/parachain/main/: fn.start_node.html  index.html  struct.MainExecutor.html  struct.RuntimeApi.html
robonomics_service/parachain/service/: fn.build_open_consensus.html  fn.build_open_import_queue.html  fn.start_node_impl.html  index.html  struct.NativeElseWasmExecutor.html
robonomics_service/service/: fn.full_base.html  fn.new_partial.html  index.html  struct.NativeElseWasmExecutor.html  trait.RuntimeApiCollection.html
robonomics_service/service/robonomics/: fn.new.html  index.html  struct.LocalExecutor.html
rpc/: Cargo.toml
runtime/alpha/: Cargo.toml
runtime/dev/: Cargo.toml  build.rs
runtime/dev/src/: lib.rs
runtime/ipci/: Cargo.toml
runtime/local/: Cargo.toml
runtime/main/: Cargo.toml
runtime/main/src/: lib.rs
service/: Cargo.toml
service/src/: cli.rs  command.rs  service.rs
src/robonomics/: main.rs.html
src/robonomics_pair/: error.rs.html  lib.rs.html  pair.rs.html
src/robonomics_protocol/: lib.rs.html  network.rs.html  pubsub.rs.html  reqres.rs.html
src/robonomics_protocol/network/: behaviour.rs.html  discovery.rs.html  worker.rs.html
src/robonomics_request_response_example/: main.rs.html
src/robonomics_ros_example/: main.rs.html
src/robonomics_rpc/: lib.rs.html  reqresrpc.rs.html
src/robonomics_service/: cli.rs.html  command.rs.html  parachain.rs.html  service.rs.html
src/robonomics_service/parachain/: service.rs.html
