[[bin]]
name = "robonomics"
path = "src/main.rs"

[package]
name = "robonomics"
description = "The Robonomics Network node."
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace.package]
version = "3.2.0"
edition = "2021"
authors = ["Airalab <research@robonomics.network>"]
license = "Apache-2.0"
homepage = "https://robonomics.network"
repository = "https://github.com/airalab/robonomics"

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
color-eyre = { version = "0.6.1", default-features = false }
tikv-jemallocator = "0.5.0"
robonomics-node = { path = "node" }

[features]
runtime-benchmarks = ["robonomics-node/runtime-benchmarks"]
jemalloc-allocator = []

[workspace]
members = [
  "frame/rws",
  "frame/launch",
  "frame/datalog",
  "frame/liability",
  "frame/lighthouse",
  "frame/digital-twin",
  "frame/xcm-info",
  "primitives",
  "runtime/dev",
  "runtime/main",
  "node/rpc/core",
  "node/service",
  "node",
]

[workspace.dependencies]
# General deps
# (wasm)
bounded-collections = { version = "0.1.8", default-features = false }
parity-scale-codec = { version = "3.6.1", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
  "derive",
] }
smallvec = { version = "1.11", default-features = false }
log = { version = "0.4.19", default-features = false }

# (native)
bs58 = "0.5.0"
clap = { version = "4.2.5", features = ["derive"] }
color-print = "0.3.4"
futures = { version = "0.3.21", features = ["thread-pool"] }
hex-literal = "0.3.4"
serde = { version = "1.0.171", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
thiserror = "1.0.43"
async-trait = "0.1.71"

# Substrate
# (wasm)
sp-core = { version = "32.0.0", default-features = false }
sp-io = { version = "34.0.0", default-features = false }
sp-runtime = { version = "35.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-api = { version = "30.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-block-builder = { version = "30.0.0", default-features = false }
sp-consensus-aura = { version = "0.36.0", default-features = false }
sp-inherents = { version = "30.0.0", default-features = false }
sp-offchain = { version = "30.0.0", default-features = false }
sp-runtime-interface = { version = "27.0.0", default-features = false }
sp-session = { version = "31.0.0", default-features = false }
sp-transaction-pool = { version = "30.0.0", default-features = false }
sp-version = { version = "33.0.0", default-features = false }
sp-weights = { version = "31.0.0", default-features = false }

# (native)
frame-benchmarking-cli = { version = "36.0.0" }
pallet-transaction-payment-rpc = { version = "34.0.0" }
substrate-build-script-utils = { version = "11.0.0" }
substrate-frame-rpc-system = { version = "32.0.0" }
substrate-prometheus-endpoint = { version = "0.17.0" }
sc-basic-authorship = { version = "0.38.0" }
sc-cli = { version = "0.40.0" }
sc-client-api = { version = "32.0.0" }
sc-chain-spec = { version = "31.0.0" }
sc-consensus = { version = "0.37.0" }
sc-consensus-aura = { version = "0.38.0" }
sc-consensus-grandpa = { version = "0.23.0" }
sc-executor = { version = "0.36.0" }
sc-offchain = { version = "33.0.0" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-keystore = { version = "29.0.0" }
sc-network = { version = "0.38.0" }
sc-network-sync = { version = "0.37.0" }
sc-rpc = { version = "33.0.0" }
sc-rpc-api = { version = "0.37.0" }
sc-service = { version = "0.39.0" }
sc-storage-monitor = { version = "0.20.0" }
sc-sysinfo = { version = "31.0.0" }
sc-telemetry = { version = "18.0.0" }
sc-tracing = { version = "32.0.0" }
sc-transaction-pool = { version = "32.0.0" }
sc-transaction-pool-api = { version = "32.0.0" }
sp-blockchain = { version = "32.0.0" }
sp-consensus = { version = "0.36.0" }
sp-consensus-grandpa = { version = "17.0.0" }
sp-keystore = { version = "0.38.0" }
sp-keyring = { version = "35.0.0" }
sp-timestamp = { version = "30.0.0" }
try-runtime-cli = { version = "0.42.0" }

# Substrate pallets 
# (wasm)
pallet-balances = { version = "33.0.0", default-features = false }
frame-support = { version = "32.0.0", default-features = false }
frame-system = { version = "32.0.0", default-features = false }
frame-executive = { version = "32.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "30.0.0", default-features = false }
pallet-assets = { version = "33.0.0", default-features = false }
pallet-aura = { version = "31.0.0", default-features = false }
pallet-collective = { version = "32.0.0", default-features = false }
pallet-democracy = { version = "32.0.0", default-features = false }
pallet-membership = { version = "32.0.0", default-features = false }
pallet-multisig = { version = "32.0.0", default-features = false }
pallet-preimage = { version = "32.0.0", default-features = false }
pallet-scheduler = { version = "33.0.0", default-features = false }
pallet-treasury = { version = "31.0.0", default-features = false }
pallet-utility = { version = "32.0.0", default-features = false }
pallet-vesting = { version = "32.0.0", default-features = false }
pallet-sudo = { version = "32.0.0", default-features = false }
pallet-timestamp = { version = "31.0.0", default-features = false }
pallet-transaction-payment = { version = "32.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "32.0.0", default-features = false }
pallet-identity = { version = "32.0.0", default-features = false }
frame-benchmarking = { version = "32.0.0", default-features = false }
frame-system-benchmarking = { version = "32.0.0", default-features = false }
frame-try-runtime = { version = "0.38.0", default-features = false }
pallet-grandpa = { version = "32.0.0", default-features = false }
sp-staking = { version = "30.0.0", default-features = false }

# Cumulus
# (native)
cumulus-client-cli = { version = "0.11.0" }
cumulus-client-consensus-common = { version = "0.11.0" }
cumulus-client-consensus-relay-chain = { version = "0.11.0" }
cumulus-client-network = { version = "0.11.0" }
cumulus-client-service = { version = "0.11.0" }
cumulus-primitives-parachain-inherent = { version = "0.11.0" }
cumulus-relay-chain-interface = { version = "0.11.0" }
cumulus-relay-chain-rpc-interface = { version = "0.11.0" }

# Cumulus
# (wasm)
cumulus-pallet-dmp-queue = { version = "0.11.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.11.0", default-features = false }
cumulus-pallet-xcm = { version = "0.11.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.11.0", default-features = false }
cumulus-primitives-core = { version = "0.11.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.11.0", default-features = false }
cumulus-primitives-utility = { version = "0.11.0", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }

# Polkadot 
# (native)
polkadot-cli = { version = "11.0.0" }

# Polkadot 
# (wasm)
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
polkadot-runtime-parachains = { version = "11.0.0", default-features = false }
polkadot-primitives = { version = "11.0.0", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }

# Build deps
substrate-wasm-builder = { version = "21.0.0" }
